--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
           <button class="burger-btn" type="button" data-menu-open>
             <svg class="burger-icon" width="24" height="24">
-              <use href="./images/icons/burger.svg#icon-burger"></use>
+              <use href="./images/icons.svg#icon-burger"></use>
             </svg>
           </button>
         </div>
@@ -61,8 +61,16 @@
                 <p>Portfolio</p>
                 <p>Contacts</p>
             </nav>
-            <address>+11 (000) 111-11-11
-                info@devstudio.com</address>
+            <address class="mobile-contact">
+              <ul class="mobile-contact-list">
+                <li class="mobile-contact-item">
+                  <a href="+11 (000) 111-11-11"></a>
+                </li>
+                <li>
+                  <a href="info@devstudio.com"></a>
+                </li>
+              </ul>
+              </address>
             <div>
                 <ul class="social_media_list">
                     <li class="social_media_item">
