--- a/index.html
+++ b/index.html
@@ -56,23 +56,31 @@
   
         <div class="mobile-menu" data-menu>
           <div class="container mobile-menu-container">
-            <button class="mobile-menu-close" data-menu-close>Close</button>
-            <nav class="mobile-menu-nav">Studio
-                <p>Portfolio</p>
-                <p>Contacts</p>
+            <button class="mobile-menu-close" data-menu-close>Close
+              <svg class="mobile-close" width="24" height="24">
+                <use href="./images/icons.svg#icon-mobileclose"></use>
+              </svg>
+            </button>
+            <nav class="mobile-menu-nav">
+              <ul class="mobile-nav-list">
+                <li class="mobile-nav-item">
+                  <a class="mobile-menu-items" href="">Studio</a>
+                  <a class="mobile-menu-item" href="">Portfolio</a>
+                  <a class="mobile-menu-item" href="">Contacts</a>
+              </ul>
             </nav>
             <address class="mobile-contact">
               <ul class="mobile-contact-list">
                 <li class="mobile-contact-item">
-                  <a href="+11 (000) 111-11-11"></a>
+                  <a href="+11 (000) 111-11-11">+11 (000) 111-11-11</a>
                 </li>
-                <li>
-                  <a href="info@devstudio.com"></a>
+                <li class="mobile-contact-item pasts">
+                  <a href="info@devstudio.com">info@devstudio.com</a>
                 </li>
               </ul>
               </address>
             <div>
-                <ul class="social_media_list">
+                <ul class="social-mobile-list">
                     <li class="social_media_item">
                       <a href="https://www.instagram.com" class="social_media_link">
                         <svg class="footer-icon" width="24" height="24">
