add murkup portfolio

--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card1_tab@1x.jpg 1x,
-                      ./images/fotos/Card1_tab@2x.jpg 2x
+                      ./images/fotos/Card1_desk@1x.jpg 1x,
+                      ./images/fotos/Card1_desk@2x.jpg 2x
                     "
                   />
 
@@ -389,14 +389,14 @@
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card1_mob@1x.jpg 1x,
-                      ./images/fotos/Card1_mob@2x.jpg 2x
+                      ./images/fotos/Card1_desk@1x.jpg 1x,
+                      ./images/fotos/Card1_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card1_mob@1x.jpg"
+                    src="./images/fotos/Card1_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
@@ -430,23 +430,23 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card2_tab@1x.jpg 1x,
-                      ./images/fotos/Card2_tab@2x.jpg 2x
-                    "
+                    ./images/fotos/card2_desk@1x.jpg 1x,
+                    ./images/fotos/Card2_desk@2x.jpg 2x
+                  "
                   />
 
                   <!-- Mobile -->
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card2_mob@1x.jpg 1x,
-                      ./images/fotos/Card2_mob@2x.jpg 2x
+                      ./images/fotos/Card2_desk@1x.jpg 1x,
+                      ./images/fotos/Card2_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card2_mob@1x.jpg"
+                    src="./images/fotos/Card2_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
@@ -480,8 +480,8 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card3_tab@1x.jpg 1x,
-                      ./images/fotos/Card3_tab@2x.jpg 2x
+                      ./images/fotos/Card3_desk@1x.jpg 1x,
+                      ./images/fotos/Card3_desk@2x.jpg 2x
                     "
                   />
 
@@ -489,14 +489,14 @@
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card3_mob@1x.jpg 1x,
-                      ./images/fotos/Card3_mob@2x.jpg 2x
+                      ./images/fotos/Card3_desk@1x.jpg 1x,
+                      ./images/fotos/Card3_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card3_mob@1x.jpg"
+                    src="./images/fotos/Card3_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
@@ -529,8 +529,8 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card4_tab@1x.jpg 1x,
-                      ./images/fotos/Card4_tab@2x.jpg 2x
+                      ./images/fotos/Card4_desk@1x.jpg 1x,
+                      ./images/fotos/Card4_desk@2x.jpg 2x
                     "
                   />
 
@@ -538,14 +538,14 @@
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card4_mob@1x.jpg 1x,
-                      ./images/fotos/Card4_mob@2x.jpg 2x
+                      ./images/fotos/Card4_desk@1x.jpg 1x,
+                      ./images/fotos/Card4_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card4_mob@1x.jpg"
+                    src="./images/fotos/Card4_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
@@ -578,8 +578,8 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card5_tab@1x.jpg 1x,
-                      ./images/fotos/Card5_tab@2x.jpg 2x
+                      ./images/fotos/Card5_desk@1x.jpg 1x,
+                      ./images/fotos/Card5_desk@2x.jpg 2x
                     "
                   />
 
@@ -587,14 +587,14 @@
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card5_mob@1x.jpg 1x,
-                      ./images/fotos/Card5_mob@2x.jpg 2x
+                      ./images/fotos/Card5_desk@1x.jpg 1x,
+                      ./images/fotos/Card5_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card5_mob@1x.jpg"
+                    src="./images/fotos/Card5_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
@@ -627,8 +627,8 @@
                   <source
                     media="(min-width: 768px )"
                     srcset="
-                      ./images/fotos/Card6_tab@1x.jpg 1x,
-                      ./images/fotos/Card6_tab@2x.jpg 2x
+                      ./images/fotos/Card6_desk@1x.jpg 1x,
+                      ./images/fotos/Card6_desk@2x.jpg 2x
                     "
                   />
 
@@ -636,14 +636,14 @@
                   <source
                     media="(max-width: 767px )"
                     srcset="
-                      ./images/fotos/Card6_mob@1x.jpg 1x,
-                      ./images/fotos/Card6_mob@2x.jpg 2x
+                      ./images/fotos/Card6_desk@1x.jpg 1x,
+                      ./images/fotos/Card6_desk@2x.jpg 2x
                     "
                   />
 
                   <img
                     class="portfolio-img"
-                    src="./images/fotos/Card6_mob@1x.jpg"
+                    src="./images/fotos/Card6_desk@1x.jpg"
                     alt="Banking app"
                     width="360"
                     height="300"
