--- a/index.html
+++ b/index.html
@@ -718,7 +718,7 @@
             <button class="footer-btn" type="submit">
               Subscribe
               <svg class="form-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-Frame"></use>
+                <use href="./images/icons.svg#icon-frame"></use>
               </svg>
             </button>
           </form>
