add murkup portfolio

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               <img
                 class="team-img"
                 srcset="
-                  ../images/Team/Team1.jpg  1x,
+                  ./images/Team/Team1.jpg  1x,
                   ./images/Team/Team1@2x.jpg 2x
                 "
                 src="./images/Team/Team1.jpg"
